macros/context-derive/tests/ui/06_unit_struct.rs
use gadget_sdk::ctx::KeystoreContext;

#[derive(KeystoreContext)]
struct MyContext;

fn main() {}
